--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -28,17 +28,19 @@ jobs:
         python-version: '3.x'
     
     - name: get commit message
-      run: echo ${{ github.event.head_commit.message }}
+      run: |
+        echo ${{ github.event.head_commit.message }}
 
     - name: Take publish type
       run: |
-        commit_message=$(git log --reverse -n 1 --pretty="%f")
-        if [[ "$commit_message" == +"Telegram"* ]];
+        commit_message=${{ github.event.head_commit.message }}
+        echo commit_message
+        if [[ "$commit_message" == *"Telegram"* ]];
         then
           echo " publish_type=Telegram" >> $GITHUB_ENV
-        if [[ "$commit_message" == +"Cli"* ]];
+        if [[ "$commit_message" == *"Cli"* ]];
         then
           echo " publish_type=Cli" >> $GITHUB_ENV
-        else:
+        else
           echo " publish_type=null" >> $GITHUB_ENV 
         fi
