--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -29,11 +29,11 @@ jobs:
     
     - name: get commit message
       run: |
-        if(${{ contains(github.event.head_commit.message, "Telegram") }}){
-          echo "hi"
+        if(${{ contains(github.event.head_commit.message, "Telegram") }} ){
+          echo "hi";
         }
         else{
-          echo "by"
+          echo "by";
         }
 
     - name: Take publish type
