--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -29,7 +29,7 @@ jobs:
     
     - name: get commit message
       run: |
-        if(${{ contains(github.event.head_commit.message, "Telegram") }} ){
+        if(${{ contains(github.event.head_commit.message, 'Telegram') }} ){
           echo "hi";
         }
         else{
