--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -31,9 +31,8 @@ jobs:
       run: |
         if(${{ contains(github.event.head_commit.message, 'Telegram') }} )
           echo "hi";
-        else{
+        else
           echo "by";
-        }
 
     - name: Take publish type
       run: |
