--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -31,7 +31,7 @@ jobs:
       run: |
         if(${{ contains(github.event.head_commit.message, 'Telegram') }} )
           echo "hi";
-        else
+        else  if
           echo "by";
 
     - name: Take publish type
