--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -31,8 +31,8 @@ jobs:
       run: |
         if(${{ contains(github.event.head_commit.message, 'Telegram') }} )
           echo "hi";
-        else if
-          echo "by";
+        if(${{ contains(github.event.head_commit.message, 'Cli') }} )
+          echo "bys";
 
     - name: Take publish type
       run: |
