Add config file for bitracker configurations and parsing functions.

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -9,7 +9,8 @@ info:
 
 paths:
   # CRYPTO NAME
-  /v1/crypto/{crypto_name}:
+  # crypto_name+ instructs AWS API Gateway to handle path variables.
+  /v1/crypto/{crypto_name+}:
     get:
       tags: []
       operationId: crypto_price
