--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -27,13 +27,16 @@ jobs:
       with:
         python-version: '3.x'
     
-    - name: get commit message
-      run: |
-        if(${{ contains(github.event.head_commit.message, 'Telegram') }})
-          echo "hi";
-        if(${{ contains(github.event.head_commit.message, 'Cli') }})
-          echo "bys";
+    - name: is_publish_type
+      id: is_publish_type
+      with:
+        cond: ${{ contains(github.event.head_commit.message, 'Telegram') || contains(github.event.head_commit.message, 'Cli') }}
+        if_true: '1'
+        if_false: '0'
 
+    - name: publish_type 
+      run: echo $is_publish_type
+        
     - name: Take publish type
       run: |
         commit_message=$(git log --reverse -n 1 --pretty="%f")
