--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -31,6 +31,6 @@ jobs:
     - name: is_publish_type
       if: ${{ contains(github.event.head_commit.message, 'Telegram') || contains(github.event.head_commit.message, 'Cli') }}
       run: |
-        if [[ "${{github.event.head_commit.message}}" == *"Telegram"* ]];
-          echo " publish_type=Telegram" >> $GITHUB_ENV
+        if [[ "${{github.event.head_commit.message}}" == *"Telegram"* ]]; then
+          echo " publish_type=Telegram" >> $GITHUB_ENV;
         fi
