--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -32,5 +32,7 @@ jobs:
       if: ${{ contains(github.event.head_commit.message, 'Telegram') || contains(github.event.head_commit.message, 'Cli') }}
       run: |
         if [[ "${{github.event.head_commit.message}}" == *"Telegram"* ]]; then
-          echo " publish_type=Telegram" >> $GITHUB_ENV;
+          echo " PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
+        if [[ "${{github.event.head_commit.message}}" == *"Cli"* ]]; then
+          echo " PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
         fi
