--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -30,8 +30,8 @@ jobs:
       if: ${{ contains(github.event.head_commit.message, 'Telegram') || contains(github.event.head_commit.message, 'Cli') }}
       run: |
         if [[ "${{github.event.head_commit.message}}" == "Telegram"* ]]; then
-          echo " PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
-          echo $PUBLISH_TYPE;
+          echo "PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
+          echo ${{ env.PUBLISH_TYPE }}
         fi;
         if [[ "${{github.event.head_commit.message}}" == *"Cli"* ]]; then
           echo " PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
