--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -43,8 +43,9 @@ jobs:
         fi
     
     - name: create repository
-      if: ${{PUBLISH_TYPE!='none'}}
       run: |
+        if [[ "${{PUBLISH_TYPE}}" != "none"* ]];
+        then
         echo $PUBLISH_TYPE
 
 
