--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -29,7 +29,7 @@ jobs:
         python-version: '3.x' 
     
     - name: is publish type
-      if: ${{ contains(github.event.head_commit.message, 'Telegram') || contains(github.event.head_commit.message, 'Cli') }}
+      if: ${{ contains(github.event.head_commit.message.lowercase, 'telegram') || contains(github.event.head_commit.message, 'Cli') }}
       run: |
         if [[ "${{github.event.head_commit.message}}" == "Telegram"* ]]; 
         then
