--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -49,7 +49,7 @@ jobs:
         aws_region: ${{ secrets.AWS_REGION }}
         function_name: 'crypto_monitor'
         handler: handler
-        zip-file: './bitracker.zip'
+        zip_file: './bitracker.zip'
         memory_size: 256
         timeout: 5
         role: ${{ secrets.AWS_ROLE }}
