--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -43,7 +43,7 @@ jobs:
       run: |
         if [[ $PUBLISH_TYPE != "none" ]];
         then
-        branch=$(git branch -a);
+        branch=$(git branch);
         echo $branch;
         fi
 
