--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -48,8 +48,8 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_REGION }}
         function_name: 'crypto_monitor'
-        handler: handler
+        #handler: handler
         zip_file: './bitracker.zip'
-        role: ${{ secrets.AWS_ROLE }}
+        #role: ${{ secrets.AWS_ROLE }}
         runtime: python3.9
         
