--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -47,9 +47,9 @@ jobs:
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_REGION }}
-        function_name: 'crypto_monitor'
+        function_name: crypto_monitor
         #handler: handler
         zip_file: './bitracker.zip'
         #role: ${{ secrets.AWS_ROLE }}
-        runtime: python3.9
+        #runtime: python3.9
         
