--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -36,7 +36,8 @@ jobs:
         cd pack 
         zip -r ../bitracker.zip .
         cd ..
-        zip -g bitracker.zip backend/*
+        mv backend/inspector.py .
+        zip -g bitracker.zip inspector.py
 
     - name: List
       run: ls -a
@@ -48,8 +49,8 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_REGION }}
         function_name: 'crypto_monitor'
-        handler: handler
+        #handler: handler
         zip_file: './bitracker.zip'
-        role: ${{ secrets.AWS_ROLE }}
-        runtime: python3.9
+        #role: ${{ secrets.AWS_ROLE }}
+        #runtime: python3.9
         
