--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -40,7 +40,7 @@ jobs:
         fi
     
     - name: Cli Publish
-      if: ${{ "$PUBLISH_TYPE"=="Cli" }}
+      if: ${{ "${{PUBLISH_TYPE}}"=="Cli" }}
       run: |
         python -m pip install --upgrade pip
         pip install build
