--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -35,12 +35,12 @@ jobs:
         then
           echo "PUBLISH_TYPE=Telegram" >> $GITHUB_ENV;
         fi
-        if [[ "${{github.event.head_commit.message}}" == 'Cli' ]]; then
+        if [[ "${{github.event.head_commit.message}}" == "Cli"* ]]; then
           echo "PUBLISH_TYPE=Cli" >> $GITHUB_ENV;
         fi
     
     - name: Cli Publish
-      if: ${{ env.PUBLISH_TYPE=="Cli" }}
+      if: ${{ env.PUBLISH_TYPE=='Cli' }}
       run: |
         python -m pip install --upgrade pip
         pip install build
