--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -1,14 +1,3 @@
-# one job for each client distribution, e.g. one job for pip distribution, one for telegram, etc.
-
-# run job in parallel
-
-# Commit message: Telegram major OR Major telegram
-# Commit message: Cli minor OR Minor CLI
-# Commit message: Cli minor AND Telegram Hotfix 
-
-
-# NOTE this job can run in parallel with the others
-# if commit message == lambda change or just lambda
 name: Publish Bitracker
 
 on:
@@ -20,8 +9,12 @@ on:
 jobs:
   # deploy-lambda deploys the python backend code on AWS as a lambda
   # from a zip package created with the necessary dependencies.
-  deploy-lambda:
+  deploy-inspector-lambda:
     runs-on: ubuntu-latest
+    env:
+      FUNC_NAME: inspector.py
+      ZIP_FILE: bitracker-inspector.zip
+      LAMBDA_NAME: bitracker_inspector
     steps:
     - name: Checkout 
       uses: actions/checkout@v2
@@ -32,15 +25,12 @@ jobs:
 
     - name: Create zip package
       run: |
-        pip install --target ./pack requests 
+        pip install --target ./pack requests boto3 
         cd pack 
-        zip -r ../bitracker.zip .
+        zip -r ../$ZIP_FILE .
         cd ..
-        mv backend/inspector.py .
-        zip -g bitracker.zip inspector.py
-
-    - name: List
-      run: ls -a
+        mv backend/$FUNC_NAME .
+        zip -g $ZIP_FILE $FUNC_NAME
       
     - name: Publish lambda
       uses: appleboy/lambda-action@master
@@ -48,5 +38,37 @@ jobs:
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_REGION }}
-        function_name: crypto_monitor
-        zip_file: './bitracker.zip'      
+        function_name: $LAMBDA_NAME
+        zip_file: './$ZIP_FILE'   
+
+  deploy-historical-price-lambda:
+    runs-on: ubuntu-latest
+    env:
+      FUNC_NAME: get_historical_price.py
+      ZIP_FILE: bitracker-get-historical-price.zip
+      LAMBDA_NAME: bitracker_get_historical_price
+    steps:
+    - name: Checkout 
+      uses: actions/checkout@v2
+
+    - name: Install pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Create zip package
+      run: |
+        pip install --target ./pack boto3
+        cd pack 
+        zip -r ../$ZIP_FILE .
+        cd ..
+        mv backend/$FUNC_NAME .
+        zip -g $ZIP_FILE $FUNC_NAME
+      
+    - name: Publish lambda
+      uses: appleboy/lambda-action@master
+      with:
+        aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws_region: ${{ secrets.AWS_REGION }}
+        function_name: $LAMBDA_NAME
+        zip_file: './$ZIP_FILE'   
