Update the reversion_id

--- a/.github/workflows/publish-lambda.yaml
+++ b/.github/workflows/publish-lambda.yaml
@@ -73,4 +73,4 @@ jobs:
         aws_region: ${{ secrets.AWS_REGION }}
         function_name: bitracker_get_historical_price
         zip_file: './bitracker-get-historical-price.zip'   
-        reversion_id: '$LATEST'
+        reversion_id: '9'
